- display dial out button

--- a/bigbluebutton-client/locale/en_US/bbbResources.properties
+++ b/bigbluebutton-client/locale/en_US/bbbResources.properties
@@ -283,6 +283,7 @@ bbb.desktopView.actualSize = Display actual size
 bbb.desktopView.minimizeBtn.accessibilityName = Minimize the Desktop Sharing View Window
 bbb.desktopView.maximizeRestoreBtn.accessibilityName = Maximize the Desktop Sharing View Window
 bbb.desktopView.closeBtn.accessibilityName = Close the Desktop Sharing View Window
+bbb.toolbar.phone.toolTip.dialout = Dial out to invite user
 bbb.toolbar.phone.toolTip.start = Share Your Microphone
 bbb.toolbar.phone.toolTip.stop = Stop Sharing Your Microphone
 bbb.toolbar.phone.toolTip.mute = Stop listening the conference
