- add UI to enter user's phone number

--- a/bigbluebutton-client/locale/en_US/bbbResources.properties
+++ b/bigbluebutton-client/locale/en_US/bbbResources.properties
@@ -18,7 +18,12 @@ bbb.audioSelection.btnMicrophone.toolTip = Join the audio with your microphone
 bbb.audioSelection.btnListenOnly.label = Listen Only
 bbb.audioSelection.btnListenOnly.toolTip = Join the audio as listen only
 bbb.audioSelection.txtPhone.text = To join this meeting by phone, dial: {0} then enter {1} as the conference pin number.
-bbb.phone.dialoutwindow.title=Enter the phone number of the user you want to invite
+bbb.phone.dialoutwindow.title=Invite User
+bbb.phone.dialoutwindow.enterNumber.label=Enter the number to call. Make sure you add country plus area code.
+bbb.phone.dialoutwindow.inviteButton=Invite
+bbb.phone.dialoutwindow.inviteButton.toolTip=Click to invite the user into the voice conference.
+bbb.phone.dialoutwindow.cancelButton=Cancel
+bbb.phone.dialoutwindow.cancelButton.toolTip=Cancel
 bbb.micSettings.title = Audio Test
 bbb.micSettings.speakers.header = Test Speakers
 bbb.micSettings.microphone.header = Test Microphone
